--- a/templates/login.html
+++ b/templates/login.html
@@ -14,6 +14,7 @@
         </div>
         <div class="p-5">
             <h3 class="text-primary">Please login!</h3>
+            <button class="btn btn-danger" onclick="window.location.href='/sessdump';">[Debug] Dump All Sessions</button>
         </div>
     </div>
     <form action="/login" class="p-5 m-5 bg-light border" method="POST">
